2006-04-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2386]
	* sysdeps/unix/sysv/linux/ia64/clone2.S: Check for NULL stakc
	pointers to match other architectures.
	* sysdeps/unix/sysv/linux/Makefile [subdirs=misc] (tests): Add
	tst-clone.
	* sysdeps/unix/sysv/linux/tst-clone.c: New file.

	[BZ #2072]
	* stdio-common/printf_fp.c: Fix potential memory leaks for
	malloc'ed wbuffer which isn't freed in error conditions.

	[BZ #2569]
	* iconv/gconv_db.c (__gconv_release_step): Fix condition of assert
	call.
	* iconvdata/Makefile (tests): Add tst-iconv6.
	* iconvdata/tst-iconv6.c: New file.

2006-04-24  Ulrich Drepper  <drepper@redhat.com>

	* posix/tst-rfc3484.c (do_test): Also initialize source_addr_flags
	field.
	* posix/tst-rfc3484-2.c (do_test): Likewise.

	* posix/tst-rfc3484.c: Include <ifaddrs.h> early.
	* posix/tst-rfc3484-2.c: Likewise.

	* version.h (VERSION): Bunp to 2.4.90 for the trunk.

2006-04-24  Jakub Jelinek  <jakub@redhat.com>

	* malloc/arena.c (ptmalloc_init): Don't call __malloc_check_init
	if MALLOC_CHECK_ env var contains an empty string.

2006-04-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (getaddrinfo): Always initialize in6ai.

2006-04-24  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sync_file_range.c (sync_file_range): Use
	__LONG_LONG_PAIR macro.

	* posix/bits/unistd.h (__readlinkat_chk): New prototype.
	(__readlinkat_alias): New alias.
	(readlinkat): New inline function.
	* include/unistd.h (readlinkat): Add libc_hidden_proto.
	* sysdeps/unix/sysv/linux/readlinkat.c (readlinkat): Add
	libc_hidden_def.
	* io/readlinkat.c (readlinkat): Likewise.
	* debug/readlinkat_chk.c: New file.
	* debug/Makefile (routines): Add readlinkat_chk.
	* debug/Versions (libc): Export __readlinkat_chk@@GLIBC_2.5.
	* debug/tst-chk1.c (do_test): Add readlinkat tests.

2006-04-23  Ulrich Drepper  <drepper@redhat.com>

	* nis/nss_nisplus/nisplus-netgrp.c: Cleanups.

	[BZ #1951]